welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:2: error: not found: type int
  var hauteurMonde : int = getMondeHauteur()
                     ^Array2:3: error: not found: type int
  var largeurMonde : int = getMondeLargeur()
                     ^Array2:18: error: not found: type int
def remplirTableau1(hauteurMonde : int):Array[Color] = {
                                   ^